# hermes-supabase-memory

./: .gitignore  README.md  pyproject.toml
deploy/: README.md  bootstrap-turtle.sh  cli-config.template.yaml
deploy/souls/: donatello.md  leonardo.md  michelangelo.md  moses.md  raphael.md
pgvector_memory/: __init__.py
