[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-supabase-memory"
version = "0.1.0"
description = "Supabase pgvector memory provider for Hermes Agent v0.12+"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "supabase>=2.0",
    "sentence-transformers>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "black>=24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["pgvector_memory"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
